--- a/APP/Client/hospital-appointment/package.json
+++ b/APP/Client/hospital-appointment/package.json
@@ -15,7 +15,6 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
     "react-shadow": "^19.0.2",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
@@ -46,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1"
   }
 }
