--- a/APP/Client/hospital-appointment/package.json
+++ b/APP/Client/hospital-appointment/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
+    "reodotdev": "^1.0.0",
     "styled-components": "^5.2.3",
     "web-vitals": "^1.1.1"
   },
